Fix font size and text alignment in header

--- a/style.css
+++ b/style.css
@@ -46,24 +46,33 @@ body{
     border: 5px solid white; 
     width: 500px;
     height: auto;
-}
-
-.head-bottom{
-    gap: 50px;
-}    
+} 
 
 .left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: 150px;
-    max-width: 300px;
+    max-width: 400px;
+    gap: 20px;
+}
+
+.left .textbig {
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.left .textsmall {
+    font-size: 18px;
 }
 
 .head-bottom button{
     background-color:red;
     color: white;
     padding: 10px;
-    font-size: large;
+    font-size: 24px;
     border-radius: 20px;
     border: 0;
 }
